# mammogram-pipeline

./: .gitignore  CLAUDE.md  README.md  future_fixes.md  investigations into speedruns.md  pyproject.toml
content/: STRATEGY.md
content/blog/: draft.md  images-needed.md
content/tweetstorm/: draft.md  images-needed.md
docs/: 01_preprocess.py.md  02_label_server.py.md  03_train.py.md  04_export.py.md  05_inference.py.md  db.py.md  dicom_utils.py.md
lib/: __init__.py  config.py  db.py  dicom_utils.py
scripts/: 01_preprocess.py  02_label_server.py  03_train.py  04_export.py  05_inference.py  06_gradcam.py  07_review.py  generate_presentation_images.py  test_hunch.py
tests/: test_integration_pipeline.py  test_splits.py
